feat: modify vercel domain

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const robots = ["index", "follow"];
 const title = "PECO";
 const description = "PECO es una plataforma que conecta a los consumidores con productos del mar frescos y de calidad, garantizando la transparencia en el origen y la cadena de frío.";
 const keywords = ["PECO", "productos del mar", "cadena de frío", "transparencia en el origen", "logística inteligente"];
-const url = "https://peco.vercel.app";
+const url = "https://peco-aptrv.vercel.app";
 const imageOG = "/card-twt.webp";
 const imagetwt = "/card-twt.webp";
 ---
