chore: change route

--- a/src/landing/sections/HeroSection.astro
+++ b/src/landing/sections/HeroSection.astro
@@ -17,7 +17,7 @@ import Button from "@/shared/components/Button.astro";
       </p>
 
       <Button
-        href="/productos"
+        href="/route"
         label="¡COMENCEMOS!"
         color="text-theme-rich-black bg-theme-verdigris hover:bg-theme-verdigris/80"
         rounded="rounded-4xl"
