--- a/src/landing/sections/PartnerSection.astro
+++ b/src/landing/sections/PartnerSection.astro
@@ -28,7 +28,7 @@ import SplitCard from "@/landing/components/SplitCard.astro";
       text="OPTIMIZA TU LOGÍSTICA"
       spanText="CON INTELIGENCIA EVOLUTIVA"
       image="/images/card-example-1.webp"
-      href="/comencemos"
+      href="/route"
       label="¡Hazlo más eficiente!"
     />
 
@@ -36,7 +36,7 @@ import SplitCard from "@/landing/components/SplitCard.astro";
       text="ENTREGA RÁPIDA Y FRESCA"
       spanText="DEL MAR AL MERCADO"
       image="/images/card-example-2.webp"
-      href="/comencemos"
+      href="/route"
       label="¡Hazlo más eficiente!"
     />
   </div>
