--- a/src/shared/components/Navbar.astro
+++ b/src/shared/components/Navbar.astro
@@ -22,7 +22,7 @@ import { siteConfig } from "@/shared/site";
         ))}
       </ul>
       <Button
-        href="/comencemos"
+        href="/route"
         label="COMENCEMOS"
         color="text-theme-rich-black bg-theme-verdigris hover:bg-theme-verdigris/80"
         rounded="rounded-3xl"
@@ -67,7 +67,7 @@ import { siteConfig } from "@/shared/site";
             <!-- Botón de login -->
       <div class="mt-4 pl-3 md:mt-0 md:ml-auto md:mr-12 2xl:mr-24">
         <Button
-          href="/comencemos"
+          href="/route"
           label="COMENCEMOS"
           color="text-theme-rich-black bg-theme-verdigris hover:bg-theme-verdigris/80"
           rounded="rounded-3xl"
