build: import malibre

--- a/src/layouts/PublicLayout.astro
+++ b/src/layouts/PublicLayout.astro
@@ -46,7 +46,10 @@ const {
 
 		<link rel="canonical" href={url} />
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-		
+		<link
+		href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css"
+		rel="stylesheet"
+		/>
 		<!-- Open Graph / Facebook -->
 		<meta property="og:title" content={title} />
 		<meta property="og:description" content={description} />
